<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2015, United States Government, as represented by the 
 Administrator of the National Aeronautics and Space Administration.
 All rights reserved.
 
 The PSYCO: A Predicate-based Symbolic Compositional Reasoning environment 
 platform is licensed under the Apache License, Version 2.0 (the "License"); you 
 may not use this file except in compliance with the License. You may obtain a 
 copy of the License at http://www.apache.org/licenses/LICENSE-2.0. 
 
 Unless required by applicable law or agreed to in writing, software distributed 
 under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR 
 CONDITIONS OF ANY KIND, either express or implied. See the License for the 
 specific language governing permissions and limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!--
    ================================= PROJECT INFO ==============================
    -->
    <groupId>tools.aqua</groupId>
    <artifactId>dse</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>dse</name>
    <url>https://github.com/tudo-aqua/dse</url>
    <description>A Generic Dynamic Symbolic Execution Engine</description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <!--
    ================================= REPOSITORIES ==============================
    -->
    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>


    <!--
    ================================= PROPERTIES ================================
    -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <compiler-plugin.version>3.1</compiler-plugin.version>
        <testng.version>6.8</testng.version>
    </properties>

    <!--
    ================================= BUILD PLUGINS =============================
    -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <fork>true</fork>
                    <meminitial>128m</meminitial>
                    <maxmem>512m</maxmem>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>

                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/dse-jar-with-dependency.xml</descriptor>
                    </descriptors>
                    <archive>
                        <manifest>
                            <mainClass>tools.aqua.dse.DSELauncher</mainClass>
                        </manifest>
                    </archive>
                </configuration>

                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>
        </plugins>
    </build>

    <!--
    ================================= DEPENDENCIES ==============================
    -->
    <dependencies>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-core</artifactId>
            <version>0.9.7-BV-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-z3</artifactId>
            <version>0.9.7-BV-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-cvc5-all</artifactId>
            <version>0.9.7-BV-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-metasolver</artifactId>
            <version>0.9.7-BV-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>
        <!-- Code Generation -->
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.26.2</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>ST4</artifactId>
            <version>4.3.1</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.13.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Annotations -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.23.1</version>
        </dependency>
    </dependencies>

</project>

